# libbarobo

./: .gitmodules  CMakeLists.txt  commands.h  config.cmake.in  connection.h  connection_posix.c  dongle.c  dongle.h  dongle_get_tty.c  dongle_get_tty_linux.c  dongle_get_tty_osx.c  dongle_get_tty_win32.c  donglefwd.h  findmsvc.cmake  findmsvs.cmake  findwindowssdk.cmake  get_dongle_tty.c  linkbot++.cpp  linkbot.h  linkbotl++.cpp  linux_dongle_get_tty.c  logging.h  mach_dongle_get_tty.c  mobot++.cpp  mobot.c  mobot.h  mobot_get_functions++.cpp  mobot_get_functions.c  mobot_internal.h  mobot_motion_functions++.cpp  mobot_motion_functions.c  mobot_movement_functions++.cpp  mobot_movement_functions.c  mobot_record_functions++.cpp  mobot_record_functions.c  mobot_set_functions++.cpp  mobot_set_functions.c  mobotgroup++.cpp  moboti++.cpp  moboti_get_functions++.cpp  (+16 more)
BaroboConfigFile/: .gitignore  BaroboConfigFile.c  BaroboConfigFile.h  CMakeLists.txt
BaroboConfigFile/mxml-2.7/: .gitignore  CMakeLists.txt  config.h.in  mxml-private.c  mxmldoc.c
chmobot_src/: CMakeLists.txt  Makefile_macosx  Makefile_pkg  Makefile_win  Makefile_win32  Makefile_win64  angles2distances.chf  chlinkboti.chf  chlinkbotl.chf  chmobot.chf  chmobot_chdl.cpp  chmoboti_chdl.cpp  chmobotl_chdl.cpp  createpkg.sh  degree2radian.chf
chmobot_src/lib32/: baroboconfigfile.lib  libmobot.lib  mxml.lib  regex.lib  sfp.lib
chmobot_src/lib64/: mxml.lib  sfp.lib
demos/: CMakeLists.txt  README.TXT
demos/WinGui/test1/: Serial.cpp  comutility.cpp  comutility.h  resourceppc.h  stdafx.h  test1.cpp  test1ppc.rc2
demos/chdemos/: accelcontrol.ch  copycat.ch  dataAcquisition.ch  dataAcquisition1.ch  dataAcquisition2.ch  dataAcquisition3.ch  getJointAngle.ch  group.ch  groups.ch  inchworm.ch  inchworm2.ch  lift.ch  motion.ch  nonblock.ch  nonblock2.ch  nonblock3.ch  recordAngleBegin.ch  recorddistances.ch  returnval.ch  setspeed.ch  stand2.ch  start.ch  tumble.ch  tumble2.ch  twoModules.ch  unstand2.ch
demos/chdemos/MobotsInTheForest/: scene13_twoModulesPush.ch  scene14_squareBot.ch  scene1_oneModule.ch  scene2_twoModulesRace.ch
demos/chdemos/MobotsInTheZoo/: scene10_fourWheelDrive.ch  scene11_mineSweeper.ch  scene12_fourLeg.ch  scene13_tankWithGripper.ch  scene14_humanoid.ch  scene15_dogWithTumbles.ch  scene16_twoModulesPush.ch  scene17_twoLinkedPush.ch  scene18_humanoidWithInch.ch  scene4_gorilla.ch  scene5_elephant.ch  scene8_squareBot.ch
demos/gettingStarted/: README
demos/iMobotController_Mac/: Motions.h  Motions.m  UISlider.h  UISlider.m  iMobotController_MacAppDelegate.h
demos/iMobotController_Mac/RobotController.xcodeproj/: dko.mode1v3
demos/iMobotController_Windows/iMobotController_Windows/: DialogTeaching.h  RecordMobot.cpp  iMobotController_WindowsDlg.h  robotManager.cpp
demos/inchworm/: CMakeLists.txt
demos/multipleModules/: CMakeLists.txt
demos/simple/: CMakeLists.txt  accel.cpp  callbacktest++.cpp  callbacktest.c  copycat.cpp  rawstreamtest.c  recordtest.cpp  simple.c  simple.cpp  speedtest.c  ttytest.c  twinkle.c  zigbeetest.c
demos/stand/: CMakeLists.txt  stand.cpp
demos/testVoltages/: CMakeLists.txt  voltages.c
demos/tests/: CMakeLists.txt  runTests.sh  standtest.cpp
libbarobo/: CMakeLists.txt  barobo.c  barobo.h  i2ctest.c  imobot.c  stresstest.c  test.c
libimobot/Demos/GtkGui/: CMakeLists.txt  (+6 more)
libimobotcomms/: .gitignore  CMakeLists.txt  commands.h  imobotcomms.c  imobotcomms.cpp  imobotcomms.h  linkbot.h  mobot++.cpp  mobot.c  mobot.cpp  mobot.h  mobot_get_functions++.cpp  mobot_get_functions.c  mobot_get_functions.cpp  mobot_internal.h  mobot_motion_functions++.cpp  mobot_motion_functions.c  mobot_motion_functions.cpp  mobot_movement_functions++.cpp  mobot_movement_functions.c  mobot_movement_functions.cpp  mobot_record_functions.c  mobot_record_functions.cpp  mobot_set_functions++.cpp  mobot_set_functions.c  mobot_set_functions.cpp  mobotgroup++.cpp  moboti++.cpp  moboti_get_functions++.cpp  moboti_get_functions.cpp  moboti_motion_functions++.cpp  moboti_movement_functions++.cpp  moboti_record_functions++.cpp  moboti_set_functions++.cpp  mobotigroup++.cpp  mobotl++.cpp  mobotl_get_functions++.cpp  mobotl_get_functions.cpp  mobotl_motion_functions++.cpp  mobotl_movement_functions++.cpp  (+6 more)
libimobotcomms/BaroboConfigFile/: BaroboConfigFile.c  BaroboConfigFile.h  CMakeLists.txt
libimobotcomms/GtkGui/: CMakeLists.txt  GtkiMobotController.cpp  GtkiMobotController.h  connectHandlers.cpp  gait.h  menuHandlers.cpp  movementHandlers.cpp
libimobotcomms/PyMobot/: Makefile  linkbot.py  linkbottest.py  setup.py  test.py
libimobotcomms/chmobot/: Makefile  chmobot.chf  chmobot_chdl.cpp  connect.chf  connectWithAddress.chf  getJointAngle.chf  getJointSpeed.chf  getJointState.chf  libmobot.dl  motionInchwormLeft.chf  motionInchwormRight.chf  motionInchwormRightNB.chf  motionRollBackward.chf  motionRollBackwardNB.chf  motionRollForwardNB.chf  motionStand.chf  motionTurnLeftNB.chf  motionTurnRight.chf  motionTurnRightNB.chf  move.chf  moveContinuous.chf  moveJointTo.chf  moveNB.chf  moveToNB.chf  moveToZero.chf  moveToZeroNB.chf  setJointSpeed.chf
libimobotcomms/chmobot_src/: BaroboConfigFile.h  CMakeLists.txt  Makefile  Makefile_macosx  Makefile_pkg  Makefile_win  Makefile_win32  Makefile_win64  Readme.txt  angles2distances.chf  chlinkboti.chf  chlinkbotl.chf  chmobot.chf  chmobot_chdl.cpp  chmoboti.chf  chmoboti_chdl.cpp  chmobotl.chf  chmobotl_chdl.cpp  createpkg.sh  delay.chf  disconnect.chf  getJointMaxSpeed.chf  isConnected.chf  isMoving.chf  motionInchwormLeftNB.chf  motionRollForward.chf  motionStandNB.chf  motionTurnLeft.chf  moveContinuousNB.chf  moveContinuousTime.chf  moveJointContinuousNB.chf  moveJointContinuousTime.chf  moveJointToNB.chf  moveJointWait.chf  moveTo.chf  moveWait.chf  processRecordedAngles.chf  radian2degree.chf  setJointSpeedRatio.chf  shiftTime.chf  (+1 more)
libimobotcomms/demos/: CMakeLists.txt  README.TXT
libimobotcomms/docs/: Makefile  cmobotgroup_motions_table.tex  cmobotgroup_table.tex  copyright.tex  imobotcomms_api.tex  jointStateTable.tex  mobot.tex
(+705 files in other folders)
