if(CMAKE_HOST_WIN32)
  if(NOT WINSDK_INCLUDE_PATH)
    include("../findwindowssdk.cmake")
  endif(NOT WINSDK_INCLUDE_PATH)
  if(NOT MSVC_INCLUDE_PATH)
    include("../findmsvc.cmake")
  endif(NOT MSVC_INCLUDE_PATH)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -idirafter \"${WINSDK_INCLUDE_PATH}\" -idirafter \"${MSVC_INCLUDE_PATH}\"")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -idirafter \"${WINSDK_INCLUDE_PATH}\" -idirafter \"${MSVC_INCLUDE_PATH}\"")
endif(CMAKE_HOST_WIN32)

add_subdirectory(simple)
add_subdirectory(stand)
add_subdirectory(inchworm)
add_subdirectory(multipleModules)
add_subdirectory(testVoltages)
add_subdirectory(tests)
